--- a/cat-dog-mouse-classifier.ipynb
+++ b/cat-dog-mouse-classifier.ipynb
@@ -29,7 +29,7 @@
     "Let's first import all the packages that we will need during this project. \n",
     "- [os](https://docs.python.org/3/library/os.html) contains functions for interacting with the operating system.\n",
     "- [sys](https://docs.python.org/3/library/sys.html) provides access to system-specific parameters and functions.\n",
-    "- [time](https://docs.python.org/3/library/time.html) provides various time-related functions."
+    "- [time](https://docs.python.org/3/library/time.html) provides various time-related functions.\n",
     "- [keras](https://keras.io) is a deep learning library and neural networks API.\n",
     "- [numpy](https://www.numpy.org/) is the fundamental package for scientific computing with Python.\n",
     "- [h5py](http://www.h5py.org) is a common package to interact with a dataset that is stored on an H5 file.\n",
@@ -161,7 +161,7 @@
     "## 3 - Model\n",
     "\n",
     "The get_model() function and its save_model() helper function create the model using the Keras Sequential model API (https://keras.io/models/sequential/) and save the model and weights in ./Data/Model/ as json and HDF5, respectively.\n",
-    "\n",
+    "\n"
    ]
   },
   {
@@ -241,24 +241,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, X, X_test, Y, Y_test):\n"
-    "    checkpoints = []\n"
-    "    if not os.path.exists('Data/Checkpoints/'):\n"
-    "        os.makedirs('Data/Checkpoints/')\n"
-    "    checkpoints.append(keras.callbacks.ModelCheckpoint('Data/Checkpoints/best_weights.h5', monitor='val_loss', verbose=0, save_best_only=True, save_weights_only=True, mode='auto', period=1))\n"
-    "    checkpoints.append(keras.callbacks.TensorBoard(log_dir='Data/Checkpoints/./logs', histogram_freq=0, write_graph=True, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None))\n"
-    "\n"
-    "    # Creates live data:\n"
-    "    # For better yield. The duration of the training is extended.\n"
-    "\n"
-    "    # If you don't want, use this:\n"
-    "    # model.fit(X, Y, batch_size=10, epochs=25, validation_data=(X_test, Y_test), shuffle=True, callbacks=checkpoints)\n"
-    "\n"
-    "    generated_data = keras.preprocessing.image.ImageDataGenerator(featurewise_center=False, samplewise_center=False, featurewise_std_normalization=False, samplewise_std_normalization=False, zca_whitening=False, rotation_range=0,  width_shift_range=0.1, height_shift_range=0.1, horizontal_flip = True, vertical_flip = False)\n"
-    "    generated_data.fit(X)\n"
-    "    model.fit_generator(generated_data.flow(X, Y, batch_size=8), steps_per_epoch=X.shape[0]//8, epochs=25, validation_data=(X_test, Y_test), callbacks=checkpoints)\n"
-    "\n"
-    "    return model\n"
+    "def train_model(model, X, X_test, Y, Y_test):\n",
+    "    checkpoints = []\n",
+    "    if not os.path.exists('Data/Checkpoints/'):\n",
+    "        os.makedirs('Data/Checkpoints/')\n",
+    "    checkpoints.append(keras.callbacks.ModelCheckpoint('Data/Checkpoints/best_weights.h5', monitor='val_loss', verbose=0, save_best_only=True, save_weights_only=True, mode='auto', period=1))\n",
+    "    checkpoints.append(keras.callbacks.TensorBoard(log_dir='Data/Checkpoints/./logs', histogram_freq=0, write_graph=True, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None))\n",
+    "\n",
+    "    # Creates live data:\n",
+    "    # For better yield. The duration of the training is extended.\n",
+    "\n",
+    "    # If you don't want, use this:\n",
+    "    # model.fit(X, Y, batch_size=10, epochs=25, validation_data=(X_test, Y_test), shuffle=True, callbacks=checkpoints)\n",
+    "\n",
+    "    generated_data = keras.preprocessing.image.ImageDataGenerator(featurewise_center=False, samplewise_center=False, featurewise_std_normalization=False, samplewise_std_normalization=False, zca_whitening=False, rotation_range=0,  width_shift_range=0.1, height_shift_range=0.1, horizontal_flip = True, vertical_flip = False)\n",
+    "    generated_data.fit(X)\n",
+    "    model.fit_generator(generated_data.flow(X, Y, batch_size=8), steps_per_epoch=X.shape[0]//8, epochs=25, validation_data=(X_test, Y_test), callbacks=checkpoints)\n",
+    "\n",
+    "    return model\n",
     "\n"
    ]
   },
@@ -290,16 +290,17 @@
    },
    "outputs": [],
    "source": [
-    "def predict(model, X):\n"
-    "    Y = model.predict(X)\n"
-    "    Y = np.argmax(Y, axis=1)\n"
-    "    if Y[0] == 0:\n"
-    "        Y = 'cat' \n"
-    "    elif Y[0] == 1:\n"
-    "        Y = 'dog'\n"
-    "    elif Y[0] == 2:\n"
-    "        Y = 'mouse'\n"
-    "    return Y\n"
+    "def predict(model, X):\n",
+    "    Y = model.predict(X)\n",
+    "    Y = np.argmax(Y, axis=1)\n",
+    "    if Y[0] == 0:\n",
+    "        Y = 'cat' \n",
+    "    elif Y[0] == 1:\n",
+    "        Y = 'dog'\n",
+    "    elif Y[0] == 2:\n",
+    "        Y = 'mouse'\n",
+    "    return Y\n",
+    "\n"
    ]
   },
   {
@@ -337,7 +338,7 @@
     "print('It is a ' + Y + ' !')\n",
     "\n"
    ]
-  },
+  }
  ],
  "metadata": {
   "kernelspec": {
